[package]
name = "tales-of-ssl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.140"
openssl = "0.10.72"
indicatif = "=0.17.11"
